--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>New Structure</string>
+	<string>Room Test</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -53,6 +53,19 @@
         <string>fr</string>
     </array>
     <!-- localization -->
-
+    <key>NSCameraUsageDescription</key>
+    <string>$(ROOME_TEST) Camera Usage!</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>$(ROOME_TEST) Microphone Usage!</string>
+    <key>UIApplicationSupportsIndirectInputEvents</key>
+    <true/>
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>audio</string>
+        <string>fetch</string>
+        <string>processing</string>
+        <string>remote-notification</string>
+        <string>voip</string>
+    </array>
 </dict>
 </plist>
