--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,12 @@ dependencies:
   flutter_svg: ^2.0.10+1
   get_it: ^7.2.0
   image_picker: ^1.1.2
-  intl: ^0.19.0
+  intl: ^0.20.2
   page_transition: ^2.1.0
   permission_handler: ^12.0.0+1
   pretty_dio_logger: ^1.3.1
   shared_preferences: ^2.2.3
+  stream_video_flutter: ^0.10.1
   url_launcher: ^6.3.1
 
 dev_dependencies:
